# othello-rs

./: Cargo.toml
proto/: othello.proto
src/: game_controller.rs  lib.rs  main.rs
src/game_logic/: mod.rs  othello_board.rs
src/gui/: board_view.rs  game_end_view.rs  game_window.rs  gui_runner.rs  main_menu_view.rs  mod.rs
src/networking/: connection.rs  messages.rs  mod.rs  rpc_client.rs  rpc_server.rs
