[package]
name = "othello-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
eframe = "0.29.1"
egui_extras = { version="0.29.1", features = ["default", "image"] }

[build-dependencies]
tonic-build = "*"
